[package]
name = "req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"] }
json = "0.12.4"
htmlescape = "0.3.1"
rand = "0.8.5"
itertools = "0.10.3"